--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bookshop
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
